src/test/egern/fail/comparisons_different_types_fail.egern
if (true == 2) {
    print(1);
} else {
    print(0);
}

if (2 == 3) {
    print(1);
} else {
    print(0);
}

if (2 != 3) {
    print(1);
} else {
    print(0);
}

if (2 != 2) {
    print(1);
} else {
    print(0);
}

if (2 < 1) {
    print(1);
} else {
    print(0);
}

if (2 < 2) {
    print(1);
} else {
    print(0);
}

if (2 < 3) {
    print(1);
} else {
    print(0);
}

if (2 > 1) {
    print(1);
} else {
    print(0);
}

if (2 > 2) {
    print(1);
} else {
    print(0);
}

if (2 > 3) {
    print(1);
} else {
    print(0);
}

if (2 <= 1) {
    print(1);
} else {
    print(0);
}

if (2 <= 2) {
    print(1);
} else {
    print(0);
}

if (2 <= 3) {
    print(1);
} else {
    print(0);
}

if (2 >= 1) {
    print(1);
} else {
    print(0);
}

if (2 >= 2) {
    print(1);
} else {
    print(0);
}

if (2 >= 3) {
    print(1);
} else {
    print(0);
}
